tests/bad_programs/semantic_errors/check_all_returns.notc
int main() {
    return 0;
    return 0;
    return "fjhffdg";
    return 0;
}
